mobile alignment issue--289

--- a/ui.frontend/src/main/webpack/etisalat/styles/accordion-variants.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/accordion-variants.scss
@@ -113,6 +113,7 @@
     .cmp-accordion__title{
         line-height: 1.5;
         font-size: $font16;
+        display: inline-block;
         color: $black;
         @include font-family-lato();
         padding:5px 1.5rem;
